Fix content spacing and layout issues
- Improve paragraph spacing (margin-bottom: 1.25em)
- Enhance list item spacing (margin-bottom: 0.75em)
- Add proper heading margins (h2: 2em top, h3: 1.5em top)
- Increase line height for better readability (1.7)
- Fix about page content formatting with proper <p> tags
- Add custom tab content spacing and padding
- Improve overall content layout and readability

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -59,7 +59,8 @@ small, .small {
 }
 
 p {
-  margin-bottom: 0.5em;
+  margin-bottom: 1.25em;
+  line-height: 1.7;
 }
 
 u,
@@ -73,7 +74,8 @@ ins {
 
 ul {
   padding-inline-start: 2em;
-  margin-block-start: 0.5em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
 
 del a {
@@ -171,12 +173,13 @@ hr {
 
 ul li,
 ol li {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
+  line-height: 1.6;
 }
 
 li ul,
 li ol {
-  margin-top: 0.5em;
+  margin-top: 0.75em;
 }
 
 /*
