--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -61,18 +61,30 @@
     }
   }
   h1 {
-    margin-top: 1em;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
+  }
+  
+  h2 {
+    margin-top: 2em;
+    margin-bottom: 1em;
+  }
+  
+  h3 {
+    margin-top: 1.5em;
+    margin-bottom: 0.75em;
   }
 
   p, li, dl {
     font-size: 1em;
+    line-height: 1.7;
   }
 
   /* paragraph indents */
   p {
-    margin: 0 0 $indent-var;
+    margin: 0 0 1.25em;
 
     /* sibling indentation*/
     @if $paragraph-indent == true {
@@ -81,6 +93,16 @@
         margin-top: -($indent-var);
       }
     }
+  }
+  
+  ul, ol {
+    margin-top: 0.75em;
+    margin-bottom: 1.25em;
+  }
+  
+  li {
+    margin-bottom: 0.75em;
+    line-height: 1.6;
   }
 
   a {
